@@ -1,13 +1,13 @@
 #define RUBY_VERSION "1.9.2"
-#define RUBY_PATCHLEVEL 192
+#define RUBY_PATCHLEVEL 193
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 9
 #define RUBY_VERSION_TEENY 1
 
 #define RUBY_RELEASE_YEAR 2011
 #define RUBY_RELEASE_MONTH 5
-#define RUBY_RELEASE_DAY 1
-#define RUBY_RELEASE_DATE "2011-05-01"
+#define RUBY_RELEASE_DAY 12
+#define RUBY_RELEASE_DATE "2011-05-12"
 
 #include "ruby/version.h"
 
